fix: Nav-links with btn-* class text invisible on hover

--- a/projects/hslayers/src/css/hslayers-colors.scss
+++ b/projects/hslayers/src/css/hslayers-colors.scss
@@ -4,6 +4,9 @@
 $table-group-separator-color: white;
 
 .hsl {
+  .nav-link[class*='btn-']:hover{
+    color: white;
+  }
 
   .hs-url-table .text-light th {
      color: $light;
